--- a/package.json
+++ b/package.json
@@ -12,24 +12,24 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
 	},
 	"devDependencies": {
-		"@internationalized/date": "^3.9.0",
-		"@lucide/svelte": "^0.544.0",
-		"@sveltejs/adapter-auto": "^6.1.0",
-		"@sveltejs/kit": "^2.43.5",
+		"@internationalized/date": "^3.10.0",
+		"@lucide/svelte": "^0.548.0",
+		"@sveltejs/adapter-vercel": "^6.0.0",
+		"@sveltejs/kit": "^2.47.3",
 		"@sveltejs/vite-plugin-svelte": "^6.2.1",
 		"@tailwindcss/typography": "^0.5.19",
-		"@tailwindcss/vite": "^4.1.13",
-		"bits-ui": "^2.11.4",
+		"@tailwindcss/vite": "^4.1.16",
+		"bits-ui": "^2.14.1",
 		"clsx": "^2.1.1",
 		"embla-carousel-svelte": "^8.6.0",
-		"svelte": "^5.39.6",
-		"svelte-check": "^4.3.2",
+		"svelte": "^5.41.4",
+		"svelte-check": "^4.3.3",
 		"tailwind-merge": "^3.3.1",
 		"tailwind-variants": "^3.1.1",
-		"tailwindcss": "^4.1.13",
+		"tailwindcss": "^4.1.16",
 		"tw-animate-css": "^1.4.0",
-		"typescript": "^5.9.2",
-		"vite": "^7.1.7"
+		"typescript": "^5.9.3",
+		"vite": "^7.1.12"
 	},
 	"pnpm": {
 		"onlyBuiltDependencies": [
@@ -37,6 +37,7 @@
 		]
 	},
 	"dependencies": {
+		"@vercel/analytics": "^1.5.0",
 		"mode-watcher": "^1.1.0"
 	}
 }
